--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -12,6 +12,7 @@ $container-width: 1180px;
 $header-index: 20;
 $sections-index: 10;
 $lines-index: 1;
+$ellipse-index: -1;
 
 // Spacing Desktop
 $offset-a1-desktop: 250px;
